
add_executable(tester1 basic_c_tests/CI-funptr.c)
add_executable(	tester2 basic_c_tests/CI-global.c)
add_executable(	tester3 basic_c_tests/CI-local.c)
add_executable(	tester4 basic_c_tests/array-constIdx.c)
add_executable(	tester5 basic_c_tests/array-varIdx.c)
add_executable(	tester6 basic_c_tests/array-varIdx2.c)
add_executable(	tester7 basic_c_tests/branch-call.c)
add_executable(	tester8 basic_c_tests/branch-intra.c)
add_executable(	tester9 basic_c_tests/constraint-cycle-copy.c)
add_executable(	tester10 basic_c_tests/constraint-cycle-field.c)
add_executable(	tester11 basic_c_tests/constraint-cycle-pwc.c)
add_executable(	tester12 basic_c_tests/field-ptr-arith-constIdx.c)
add_executable(	tester13 basic_c_tests/field-ptr-arith-varIdx.c)
add_executable(tester14 basic_c_tests/funptr-global.c)
add_executable(	tester15 basic_c_tests/funptr-nested-call.c)
add_executable(	tester16 basic_c_tests/funptr-simple.c)
add_executable(	tester17 basic_c_tests/funptr-struct.c)
add_executable(	tester18 basic_c_tests/global-array.c)
add_executable(	tester19 basic_c_tests/global-call-noparam.c)
add_executable(	tester20 basic_c_tests/global-call-struct.c)
add_executable(	tester21 basic_c_tests/global-call-twoparms.c)
add_executable(	tester22 basic_c_tests/global-const-struct.c)
add_executable(	tester23 basic_c_tests/global-funptr.c)
add_executable(	tester24 basic_c_tests/global-initializer.c)
add_executable(	tester25 basic_c_tests/global-nested-calls.c)
add_executable(	tester26 basic_c_tests/global-simple.c)
add_executable(	tester27 basic_c_tests/heap-indirect.c)
add_executable(	tester28 basic_c_tests/heap-linkedlist.c)
add_executable(	tester29 basic_c_tests/heap-wrapper.c)
add_executable(	tester30 basic_c_tests/int2pointer.c)
add_executable(	tester31 basic_c_tests/mesa.c)
add_executable(	tester32 basic_c_tests/ptr-dereference1.c)
add_executable(	tester33 basic_c_tests/ptr-dereference2.c)
add_executable(	tester34 basic_c_tests/ptr-dereference3.c)
add_executable(	tester35 basic_c_tests/spec-equake.c)
add_executable( tester36 basic_c_tests/spec-gap.c)
add_executable(	tester37 basic_c_tests/spec-mesa.c)
add_executable(	tester38 basic_c_tests/spec-parser.c)
add_executable(	tester39 basic_c_tests/spec-vortex.c)
add_executable(	tester40 basic_c_tests/struct-array.c)
add_executable(	tester41 basic_c_tests/struct-assignment-direct.c)
add_executable(	tester42 basic_c_tests/struct-assignment-indirect.c)
add_executable(	tester43 basic_c_tests/struct-assignment-nested.c)
add_executable(	tester44 basic_c_tests/struct-field-multi-dereference.c)
add_executable(	tester45 basic_c_tests/struct-incompab-typecast-nested.c)
add_executable(	tester46 basic_c_tests/struct-incompab-typecast.c)
add_executable(	tester47 basic_c_tests/struct-instance-return.c)
add_executable(	tester48 basic_c_tests/struct-nested-1-layer.c)
add_executable(	tester49 basic_c_tests/struct-nested-2-layers.c)
add_executable(	tester50 basic_c_tests/struct-nested-array1.c)
add_executable(	tester51 basic_c_tests/struct-nested-array2.c)
add_executable(	tester52 basic_c_tests/struct-nested-array3.c)
add_executable(	tester53 basic_c_tests/struct-onefld.c)
add_executable(	tester54 basic_c_tests/struct-simple.c)
add_executable(	tester55 basic_c_tests/struct-twoflds.c)
add_test(basic_c_tests/CI-funptr.c tester1 wpa -ander -stat=false)
add_test(basic_c_tests/CI-global.c tester2 wpa -ander -stat=false)
add_test(basic_c_tests/CI-local.c tester3 wpa -ander -stat=false)
add_test(basic_c_tests/array-constIdx.c tester4 wpa -ander -stat=false)
add_test(basic_c_tests/array-varIdx.c tester5 wpa -ander -stat=false)
add_test(basic_c_tests/array-varIdx2.c tester6 wpa -ander -stat=false)
add_test(basic_c_tests/branch-call.c tester7 wpa -ander -stat=false)
add_test(basic_c_tests/branch-intra.c tester8 wpa -ander -stat=false)
add_test(basic_c_tests/constraint-cycle-copy.c tester9 wpa -ander -stat=false)
add_test(basic_c_tests/constraint-cycle-field.c tester10 wpa -ander -stat=false)
add_test(basic_c_tests/constraint-cycle-pwc.c tester11 wpa -ander -stat=false)
add_test(basic_c_tests/field-ptr-arith-constIdx.c tester12 wpa -ander -stat=false)
add_test(basic_c_tests/field-ptr-arith-varIdx.c tester13 wpa -ander -stat=false)
add_test(basic_c_tests/funptr-global.c tester14 wpa -ander -stat=false)
add_test(basic_c_tests/funptr-nested-call.c tester15 wpa -ander -stat=false)
add_test(basic_c_tests/funptr-simple.c tester16 wpa -ander -stat=false)
add_test(basic_c_tests/funptr-struct.c tester17 wpa -ander -stat=false)
add_test(basic_c_tests/global-array.c tester18 wpa -ander -stat=false)
add_test(basic_c_tests/global-call-noparam.c tester19 wpa -ander -stat=false)
add_test(basic_c_tests/global-call-struct.c tester20 wpa -ander -stat=false)
add_test(basic_c_tests/global-call-twoparms.c tester21 wpa -ander -stat=false)
add_test(basic_c_tests/global-const-struct.c tester22 wpa -ander -stat=false)
add_test(basic_c_tests/global-funptr.c tester23 wpa -ander -stat=false)
add_test(basic_c_tests/global-initializer.c tester24 wpa -ander -stat=false)
add_test(basic_c_tests/global-nested-calls.c tester25 wpa -ander -stat=false)
add_test(basic_c_tests/global-simple.c tester26 wpa -ander -stat=false)
add_test(basic_c_tests/heap-indirect.c tester27 wpa -ander -stat=false)
add_test(basic_c_tests/heap-linkedlist.c tester28 wpa -ander -stat=false)
add_test(basic_c_tests/heap-wrapper.c tester29 wpa -ander -stat=false)
add_test(basic_c_tests/int2pointer.c tester30 wpa -ander -stat=false)
add_test(basic_c_tests/mesa.c tester31 wpa -ander -stat=false)
add_test(basic_c_tests/ptr-dereference1.c tester32 wpa -ander -stat=false)
add_test(basic_c_tests/ptr-dereference2.c tester33 wpa -ander -stat=false)
add_test(basic_c_tests/ptr-dereference3.c tester34 wpa -ander -stat=false)
add_test(basic_c_tests/spec-equake.c tester35 wpa -ander -stat=false)
add_test(basic_c_tests/spec-gap.c tester36 wpa -ander -stat=false)
add_test(basic_c_tests/spec-mesa.c tester37 wpa -ander -stat=false)
add_test(basic_c_tests/spec-parser.c tester38 wpa -ander -stat=false)
add_test(basic_c_tests/spec-vortex.c tester39 wpa -ander -stat=false)
add_test(basic_c_tests/struct-array.c tester40 wpa -ander -stat=false)
add_test(basic_c_tests/struct-assignment-direct.c tester41 wpa -ander -stat=false)
add_test(basic_c_tests/struct-assignment-indirect.c tester42 wpa -ander -stat=false)
add_test(basic_c_tests/struct-assignment-nested.c tester43 wpa -ander -stat=false)
add_test(basic_c_tests/struct-field-multi-dereference.c tester44 wpa -ander -stat=false)
add_test(basic_c_tests/struct-incompab-typecast-nested.c tester45 wpa -ander -stat=false)
add_test(basic_c_tests/struct-incompab-typecast.c tester46 wpa -ander -stat=false)
add_test(basic_c_tests/struct-instance-return.c tester47 wpa -ander -stat=false)
add_test(basic_c_tests/struct-nested-1-layer.c tester48 wpa -ander -stat=false)
add_test(basic_c_tests/struct-nested-2-layers.c tester49 wpa -ander -stat=false)
add_test(basic_c_tests/struct-nested-array1.c tester50 wpa -ander -stat=false)
add_test(basic_c_tests/struct-nested-array2.c tester51 wpa -ander -stat=false)
add_test( basic_c_tests/struct-nested-array3.c tester52 wpa -ander -stat=false)
add_test( basic_c_tests/struct-onefld.c tester53 wpa -ander -stat=false)
add_test(basic_c_tests/struct-simple.c tester54 wpa -ander -stat=false)
add_test(basic_c_tests/struct-twoflds.c tester55 wpa -ander -stat=false)

#flow-sensitive tests
add_executable(tester56 fs_tests/array_alias_1.c)
add_executable(tester57 fs_tests/array_alias_2.c)
add_executable(tester58 fs_tests/array_alias_3.c)
add_executable(tester59 fs_tests/array_alias_4.c)
add_executable(tester60 fs_tests/array_alias_5.c)
add_executable(tester61 fs_tests/branch_1.c)
add_executable(tester62 fs_tests/branch_2.c)
add_executable(tester63 fs_tests/branch_3.c)
add_executable(tester64 fs_tests/function_pointer.c)
add_executable(tester65 fs_tests/function_pointer_2.c)
add_executable(tester66 fs_tests/global_1.c)
add_executable(tester67 fs_tests/global_2.c)
add_executable(tester68 fs_tests/global_3.c)
add_executable(tester69 fs_tests/global_4.c)
add_executable(tester70 fs_tests/global_5.c)
add_executable(tester71 fs_tests/pcycle1.c)
add_executable(tester72 fs_tests/pcycle2.c)
add_executable(tester73 fs_tests/return.c)
add_executable(tester74 fs_tests/simple_1.c)
add_executable(tester75 fs_tests/simple_2.c)
add_executable(tester76 fs_tests/simple_3.c)
add_executable(tester77 fs_tests/strong_update.c)
add_executable(Tester78 fs_tests/struct_1.c)
add_executable(tester79 fs_tests/struct_2.c)
add_executable(tester80 fs_tests/test-su.c)
add_executable(tester81 fs_tests/tt.c)
add_test(fs_tests/array_alias_1.c tester56 wpa -fspta -stat=false)
add_test(fs_tests/array_alias_2.c tester57 wpa -fspta -stat=false)
add_test(fs_tests/array_alias_3.c tester58 wpa -fspta -stat=false)
add_test(fs_tests/array_alias_4.c tester59 wpa -fspta -stat=false)
add_test(fs_tests/array_alias_5.c tester60 wpa -fspta -stat=false)
add_test(fs_tests/branch_1.c tester61 wpa -fspta -stat=false)
add_test(fs_tests/branch_2.c tester62 wpa -fspta -stat=false)
add_test(fs_tests/branch_3.c tester63 wpa -fspta -stat=false)
add_test(fs_tests/function_pointer.c tester64 wpa -fspta -stat=false)
add_test(fs_tests/function_pointer_2.c tester65 wpa -fspta -stat=false)
add_test(fs_tests/global_1.c tester66 wpa -fspta -stat=false)
add_test(fs_tests/global_2.c tester67 wpa -fspta -stat=false)
add_test(fs_tests/global_3.c tester68 wpa -fspta -stat=false)
add_test(fs_tests/global_4.c tester69 wpa -fspta -stat=false)
add_test(fs_tests/global_5.c tester70 wpa -fspta -stat=false)
add_test(fs_tests/pcycle1.c tester71 wpa -fspta -stat=false)
add_test(fs_tests/pcycle2.c tester72 wpa -fspta -stat=false)
add_test(fs_tests/return.c tester73 wpa -fspta -stat=false)
add_test(fs_tests/simple_1.c tester74 wpa -fspta -stat=false)
add_test(fs_tests/simple_2.c tester75 wpa -fspta -stat=false)
add_test(fs_tests/simple_3.c tester76 wpa -fspta -stat=false)
add_test(fs_tests/strong_update.c tester77 wpa -fspta -stat=false)
add_test(fs_tests/struct_1.c tester78 wpa -fspta -stat=false)
add_test(fs_tests/struct_2.c tester79 wpa -fspta -stat=false)
add_test(fs_tests/test-su.c tester80 wpa -fspta -stat=false)
add_test(fs_tests/tt.c tester81 wpa -fspta -stat=false)

#context-sensitive tests
add_executable(tester82 cs_tests/cs0.c)
add_executable(tester83 cs_tests/cs1.c)
add_executable(tester84 cs_tests/cs2.c)
add_executable(tester85 cs_tests/cs3.c)
add_executable(tester86 cs_tests/cs4.c)
add_executable(tester87 cs_tests/cs5.c)
add_executable(tester88 cs_tests/cs6.c)
add_executable(tester89 cs_tests/cs7.c)
add_executable(tester90 cs_tests/cs8.c)
add_executable(tester91 cs_tests/cs9.c)
add_executable(tester92 cs_tests/cs10.c)
add_executable(tester93 cs_tests/cs11.c)
add_executable(tester94 cs_tests/cs12.c)
add_executable(tester95 cs_tests/cs13.c)
add_executable(tester96 cs_tests/cs14.c)
add_executable(tester97 cs_tests/cs15.c)
add_executable(tester98 cs_tests/cs16.c)
add_executable(tester99 cs_tests/cs17.c)
add_executable(tester100 cs_tests/cs18.c)
add_executable(tester101 cs_tests/cs19.c)
add_executable(tester102 cs_tests/cs20.c)
add_executable(tester103 cs_tests/funcpoiner.c)
add_executable(tester104 cs_tests/recur0.c)
add_executable(tester105 cs_tests/recur2.c)
add_executable(tester106 cs_tests/recur3.c)
add_executable(tester107 cs_tests/recur4.c)
add_executable(tester108 cs_tests/recur5.c)
add_executable(tester109 cs_tests/recur6.c)
add_executable(tester110 cs_tests/recur7.c)
add_executable(tester111 cs_tests/recur8.c)
add_executable(tester112 cs_tests/recur9.c)
add_executable(tester113 cs_tests/recur10.c)
add_test(cs_tests/cs0.c tester82 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs1.c tester83 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs2.c tester84 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs3.c tester85 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs4.c tester86 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs5.c tester87 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs6.c tester88 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs7.c tester89 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs8.c tester90 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs9.c tester91 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs10.c tester92 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs11.c tester93 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs12.c tester94 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs13.c tester95 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs14.c tester96 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs15.c tester97 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs16.c tester98 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs17.c tester99 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs18.c tester100 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs19.c tester101 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/cs20.c tester102 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/funcpoiner.c tester103 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/recur0.c tester104 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/recur2.c tester105 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/recur3.c tester106 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/recur4.c tester107 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/recur5.c tester108 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/recur6.c tester109 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/recur7.c tester110 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/recur8.c tester111 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/recur9.c tester112 dvf -cxt -print-pts=false -stat=false)
add_test(cs_tests/recur10.c tester113 dvf -cxt -print-pts=false -stat=false)

#memory leak test cases
add_executable(tester114 mem_leak/malloc0.c)
add_executable(tester115 mem_leak/malloc1.c)
add_executable(tester116 mem_leak/malloc2.c)
add_executable(tester117 mem_leak/malloc3.c)
add_executable(tester118 mem_leak/malloc4.c)
add_executable(tester119 mem_leak/malloc5.c)
add_executable(tester120 mem_leak/malloc6.c)
add_executable(tester121 mem_leak/malloc7.c)
add_executable(tester122 mem_leak/malloc8.c)
add_executable(tester123 mem_leak/malloc9.c)
add_executable(tester124 mem_leak/malloc10.c)
add_executable(tester125 mem_leak/malloc11.c)
add_executable(tester126 mem_leak/malloc12.c)
add_executable(tester127 mem_leak/malloc13.c)
add_executable(tester128 mem_leak/malloc14.c)
add_executable(tester129 mem_leak/malloc15.c)
add_executable(tester130 mem_leak/malloc16.c)
add_executable(tester131 mem_leak/malloc17.c)
add_executable(tester132 mem_leak/malloc18.c)
add_executable(tester133 mem_leak/malloc19.c)
add_executable(tester134 mem_leak/malloc20.c)
add_executable(tester135 mem_leak/malloc21.c)
add_executable(tester136 mem_leak/malloc22.c)
add_executable(tester137 mem_leak/malloc23.c)
add_executable(tester138 mem_leak/malloc24.c)
add_executable(tester139 mem_leak/malloc25.c)
add_executable(tester140 mem_leak/malloc26.c)
add_executable(tester141 mem_leak/malloc27.c)
add_executable(tester142 mem_leak/malloc28.c)
add_executable(tester143 mem_leak/malloc29.c)
add_executable(tester144 mem_leak/malloc30.c)
add_executable(tester145 mem_leak/malloc31.c)
add_executable(tester146 mem_leak/malloc32.c)
add_executable(tester147 mem_leak/malloc33.c)
add_executable(tester148 mem_leak/malloc34.c)
add_executable(tester149 mem_leak/malloc35.c)
add_executable(tester150 mem_leak/malloc36.c)
add_executable(tester151 mem_leak/malloc37.c)
add_executable(tester152 mem_leak/malloc38.c)
add_executable(tester153 mem_leak/malloc39.c)
add_executable(tester154 mem_leak/malloc40.c)
add_executable(tester155 mem_leak/malloc41.c)
add_executable(tester156 mem_leak/malloc42.c)
add_executable(tester157 mem_leak/malloc43.c)
add_executable(tester158 mem_leak/malloc44.c)
add_executable(tester159 mem_leak/malloc45.c)
add_executable(tester160 mem_leak/malloc46.c)
add_executable(tester161 mem_leak/malloc47.c)
add_executable(tester162 mem_leak/malloc48.c)
add_executable(tester163 mem_leak/malloc49.c)
add_executable(tester164 mem_leak/malloc50.c)
add_executable(tester165 mem_leak/malloc51.c)
add_executable(tester166 mem_leak/malloc52.c)
add_executable(tester167 mem_leak/malloc53.c)
add_executable(tester168 mem_leak/malloc54.c)
add_executable(tester169 mem_leak/malloc55.c)
add_executable(tester170 mem_leak/malloc56.c)
add_executable(tester171 mem_leak/malloc57.c)
add_executable(tester172 mem_leak/malloc58.c)
add_executable(tester173 mem_leak/malloc59.c)
add_executable(tester174 mem_leak/malloc60.c)
add_executable(tester175 mem_leak/malloc61.c)
add_executable(tester176 mem_leak/malloc62.c)
add_executable(tester177 mem_leak/malloc63.c)
add_executable(tester179 mem_leak/sp1.c)
add_executable(tester180 mem_leak/sp10.c)
add_executable(tester181 mem_leak/sp11.c)
add_executable(tester182 mem_leak/sp12.c)
add_executable(tester183 mem_leak/sp12a.c)
add_executable(tester184 mem_leak/sp13.c)
add_executable(tester185 mem_leak/sp13a.c)
add_executable(tester186 mem_leak/sp14.c)
add_executable(tester187 mem_leak/sp14a.c)
add_executable(tester188 mem_leak/sp15.c)
add_executable(tester189 mem_leak/sp15a.c)
add_executable(tester190 mem_leak/sp1a.c)
add_executable(tester191 mem_leak/sp2.c)
add_executable(tester192 mem_leak/sp22.c)
add_executable(tester193 mem_leak/sp2a.c)
add_executable(tester194 mem_leak/sp3.c)
add_executable(tester195 mem_leak/sp3a.c)
add_executable(tester196 mem_leak/sp4.c)
add_executable(tester197 mem_leak/sp41.c)
add_executable(tester198 mem_leak/sp4a.c)
add_executable(tester199 mem_leak/sp5.c)
add_executable(tester200 mem_leak/sp5a.c)
add_executable(tester201 mem_leak/sp6.c)
add_executable(tester202 mem_leak/sp6a.c)
add_executable(tester203 mem_leak/sp7.c)
add_executable(tester204 mem_leak/sp8.c)
add_executable(tester205 mem_leak/sp9.c)
add_test(mem_leak/malloc0.c tester114 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc1.c tester115 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc2.c tester116 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc3.c tester117 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc4.c tester118 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc5.c tester119 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc6.c tester120 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc7.c tester121 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc8.c tester122 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc9.c tester123 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc10.c tester124 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc11.c tester125 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc12.c tester126 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc13.c tester127 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc14.c tester128 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc15.c tester129 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc16c tester130 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc17.c tester131 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc18.c tester132 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc19.c tester133 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc20.c tester134 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc21.c tester135 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc22.c tester136 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc23.c tester137 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc24.c tester138 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc25.c tester139 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc26.c tester140 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc27.c tester141 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc28.c tester142 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc29.c tester143 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc30.c tester144 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc31.c tester145 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc32.c tester146 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc33.c tester147 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc34.c tester148 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc35.c tester149 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc36.c tester150 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc37.c tester151 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc38.c tester152 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc39.c tester153 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc40.c tester154 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc41.c tester155 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc42.c tester156 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc43.c tester157 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc44.c tester158 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc45.c tester159 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc46.c tester160 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc47.c tester161 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc48.c tester162 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc49.c tester163 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc50.c tester164 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc51.c tester165 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc52.c tester166 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc53.c tester167 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc54.c tester168 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc55.c tester169 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc56.c tester170 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc57.c tester171 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc58.c tester172 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc59.c tester173 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc60.c tester174 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc61.c tester175 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc62.c tester176 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/malloc63.c tester177 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp1.c tester179 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp10.c tester180 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp11.c tester181 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp12.c tester182 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp12a.c tester183 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp13.c tester184 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp13a.c tester185 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp14.c tester186 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp14a.c tester187 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp15.c tester188 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp15a.c tester189 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp1a.c tester190 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp2.c tester191 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp22.c tester192 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp2a.c tester193 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp3.c tester194 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp3a.c tester195 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp4.c tester196 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp41.c tester197 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp4a.c tester198 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp5.c tester199 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp5a.c tester200 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp6.c tester201 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp6a.c tester202 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test( mem_leak/sp7.c tester202 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp8.c tester204 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(mem_leak/sp9.c tester205 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
