cmake_minimum_required(VERSION 3.12.2)
set(CMAKE_C_COMPILER "/home/jason/llvm_source/clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04/bin/clang-10")
add_executable(tester1 basic_c_tests/CI-funptr.c)
add_test( basic_c_tests/CI-funptr.c wpa -ander -stat=false /home/jason/SVF-1/Release-build/Test-Suite/CMakeFiles/tester1.dir/basic_c_tests/CI-funptr.c.o)
target_compile_options(tester1 PUBLIC ${CMAKE_C_FLAGS} -emit-llvm)